--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,14 +4,14 @@
 :imagesDir: images
 :stylesDir: stylesheets
 
-Hospital Management System 2K18 (HMS) was developed by the https://github.com/orgs/CS2103-AY1819S1-W14-3/teams/developers[W14-3] team. +
+HealthBase was developed by the https://github.com/orgs/CS2103-AY1819S1-W14-3/teams/developers[W14-3] team. +
 We are a team based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
 
 == Project Team
 
 === Zhang Yuntong
 image::yuntongzhang.png[width="150", align="left"]
-{empty}[[homepage]] [https://github.com/yuntongzhang[github]] [<<johndoe#, portfolio>>]
+{empty}[[homepage]] [https://github.com/yuntongzhang[github]] [<<yuntongzhang#, portfolio>>]
 
 Role: Developer + Git Expert +
 Responsibilities: In charge of integration +
