--- a/docs/team/yuntongzhang.adoc
+++ b/docs/team/yuntongzhang.adoc
@@ -51,7 +51,7 @@ HealthBase is a desktop application designed to aid in the management of clinics
 |===
 
 include::../UserGuide.adoc[tag=adddiet]
-
+include::../UserGuide.adoc[tag=viewdiets]
 
 == Contributions to the Developer Guide
 
