--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -142,7 +142,7 @@ Check in a returning patient back to the HealthBase system, and retrieve his/her
 them in the left panel of the application window. The patient being checked in must have been previously registered
 to the system and were checked out of the system sometime before with the `checkout` command.
 
-Format: `checkin ic/NRCI`
+Format: `checkin ic/NRIC`
 
 ****
 TIP: If there is no record of this patient in our system (which means that the patient with the specified `NRIC` has
