--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -259,7 +259,7 @@ The adding of appointment-related information is facilitated by the following cl
 A more detailed description of the classes follows below:
 
 * `AppointmentsList`
-** Every `Person` has an `AppointmentsList`, the purpose of which is to store all `Appointment` belonging to a `Person`.
+** Every `Person` has an `AppointmentsList`, the purpose of which is to store all `Appointment`s belonging to a `Person`.
 ** A wrapper class around the internal representation of a list of appointments that exposes only a few select methods in the `List` API.
 *** The methods relevant to the `addappt` command from the API are: `add`.
 * `Appointment`
@@ -284,29 +284,41 @@ This command has the following intent: Record the following appointment to a pat
 
 |`SRG`
 |Heart Bypass
-|27-04-2019 1030
+|27-04-2019 10:30
 |Dr. Pepper
 |===
 
-The command is passed to an instance of the `LogicManager` class, which in turn executes `AddressBookParser::parse`.
-The `AddressBookParser` parses the command word (`addappt`) and executes `AddApptCommandParser::parse`.
-
-The `AddApptCommandParser::parse` method returns an `AddApptCommand` object which encapsulates the necessary information to update the Person 's appointments(s).
-Control then passes back to the `LogicManager`, which calls `AddApptCommand::execute`.
-
-[NOTE]
-If no/multiple patient(s) with that `NRIC` exist(s), then the `AddApptCommand::execute` method will throw a `CommandException` with the appropriate error message and the usage case will end.
-
-The `AddApptCommand::execute` method constructs a new `Person` object using all the details of the old `Person`, with the sole difference being the `AppointmentsList` used being a deep copy of the original `Person`'s `AppointmentsList` with the new `Appointment` added.
-This updated `Person` object is used to update the existing `Person` object using the `Model::updatePerson` method (or an overridden version) of the backing model.
-Finally, the `AddApptCommand::execute` method terminates, returning a `CommandResult` with a success message. The `LogicManager` then returns the same `CommandResult` as the return value of the `LogicManager::execute` method.
-The command execution then ends.
 
 [#img-addapptsequencediagram]
 The following sequence diagram shows the execution of the `addappt` command:
 
 .Execution sequence of the `addappt` command
 image::AddapptSequenceDiagram.png[width="800"]
+
+With reference to Figure 1, the following steps occur on the execution of the `addappt` command:
+
+<1> The command is first passed to an instance of the `LogicManager` class which in turn executes `AddressBookParser::parseCommand`.
+
+<2> The `AddressBookParser` parses the command word (`addappt`) and executes `AddApptCommandParser::parse`.
+
+<3> The `AddApptCommandParser::parse` method returns an `AddApptCommand` object which encapsulates the necessary information to update the `Person` 's `Appointment` (s).
+
+<4> Control then passes back to the `LogicManager`, which calls `AddApptCommand::execute`.
+
+<5> The `AddApptCommand::execute` method constructs a new `Person` object using all the details of the old `Person` with the exception that the `AppointmentsList` is a copy of the original `Person` 's `AppointmentsList` with an added `Appointment`.
+
+<6> This updated `Person` object is used to update the existing `Person` object using the `Model::updatePerson` method of the backing model.
+
+<7> Finally, the `AddApptCommand::execute` method terminates, returning a `CommandResult` with a success message. The `LogicManager` then returns the same `CommandResult` as the return value of the `LogicManager::execute` method.
+
+<8> The command execution then ends.
+
+[NOTE]
+If no/multiple patient(s) with that `NRIC` exist(s), then the `AddApptCommand::execute` method will throw a `CommandException` with the appropriate error message and the usage case will end.
+
+[NOTE]
+For the sake of simplicity, some methods in `AddApptCommand::execute` are excluded from the diagram. These methods check for
+the validity of the command and are not crucial in the sequence of events.
 
 ==== Design considerations
 
