--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -73,6 +73,10 @@ Example(s):
 The only valid types are `PROP` (PROPAEDEUTIC), `DIAG` (DIAGNOSTIC), `THP` (THERAPEUTIC), `SRG` (SURGICAL).
 *Other inputs are not allowed.*
 
+[NOTE]
+It is useful to note that HealthBase does not permit appointments of duplicate date and time. This is
+to prevent appointment clashes.
+
 [WARNING]
 The HealthBase System assumes that there are `31` days for all months. For the inputs of the dates `31` and `29` (for February), it is the onus of the user to ensure that
 the input month has `31` days (for months except February) and `29` days for February in a leap year.
