--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -356,11 +356,13 @@ With reference to Figure 10, the following steps occur on the execution of the `
     }
 ...
 ----
-<1> The command is first passed to an instance of the `LogicManager` class which in turn executes `AddressBookParser::parseCommand`.
-<2> The `AddressBookParser` parses the command word (`addappt`) and executes `AddApptCommandParser::parse`.
+<1> The command is first passed to an instance of the `LogicManager` class which in turn executes `HealthBaseParser::parseCommand`.
+<2> The `HealthBaseParser` parses the command word (`addappt`) and executes `AddApptCommandParser::parse`.
 <3> The `AddApptCommandParser::parse` method returns an `AddApptCommand` object which encapsulates the necessary information to update the `Person` 's `Appointment` (s).
 <4> Control then passes back to the `LogicManager`, which calls `AddApptCommand::execute`.
-<5> The `AddApptCommand::execute` method constructs a new `Person` object using all the details of the old `Person` with the exception that the `AppointmentsList` is a copy of the original `Person` 's `AppointmentsList` with an added `Appointment`.
+<5> The `AddApptCommand::execute` method constructs a new `Person` object using all the details of the old `Person` with one exception: the
+`AppointmentsList` is a copy of the original `Person` 's `AppointmentsList` with an added `Appointment`. This is done by calling the static method
+`CommandUtil::getPatient` and adding the `Appointment` to the obtained `Patient` object.
 <6> This updated `Person` object is used to update the existing `Person` object using the `Model::updatePerson` method of the backing model.
 <7> Finally, the `AddApptCommand::execute` method terminates, returning a `CommandResult` with a success message
 <8> The `LogicManager` then returns the same `CommandResult` as the return value of the `LogicManager::execute` method.
