--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -82,7 +82,7 @@ Example(s):
 * `addappt ic/S1234567A type/SRG pn/Heart Bypass dt/27-04-2019 10:30 doc/Dr. Pepper`
 
 [#img-addapptcommand]
-. Type the example command into the input box as follows in Figure 1 and hit the kbd:[Enter] key:
+. Type the example command into the input box as shown in Figure 1 and hit the kbd:[Enter] key:
 
 .Adding an appointment for patient
 image::addapptcommand.jpg[width="1000"]
@@ -251,7 +251,7 @@ Example(s):
 * `register ic/S1234567A n/John Doe p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 da/aspirin da/insulin`
 
 [#img-registercommand]
-. Type the example command into the input box as follows in Figure 3 and hit the kbd:[Enter] key:
+. Type the example command into the input box as shown in Figure 3 and hit the kbd:[Enter] key:
 
 .Registering a new patient
 image::registercommand.jpg[width="1000"]
