--- a/docs/team/jeffypie369.adoc
+++ b/docs/team/jeffypie369.adoc
@@ -49,7 +49,8 @@ HealtBase, doctors will be able to view the appointments they have with differen
 *** Refactored `add` command to `register` command (Pull request: https://github.com/CS2103-AY1819S1-W14-3/main/pull/33[#33])
 *** Refactored AddressBook to HealthBase (Pull request: https://github.com/CS2103-AY1819S1-W14-3/main/pull/218[#218])
 ** Documentation:
-*** Added sequence diagram for `addappt`: https://github.com/CS2103-AY1819S1-W14-3/main/pull/91[#91]
+*** Added sequence diagram for `addappt`: https://github.com/CS2103-AY1819S1-W14-3/main/pull/215[#215]
+*** Added activity diagram for `addappt`: https://github.com/CS2103-AY1819S1-W14-3/main/pull/215[#215]
 ** Community:
 *** PRs reviewed (with non-trivial review comments): https://github.com/CS2103-AY1819S1-W14-3/main/pull/177[#177],
 https://github.com/CS2103-AY1819S1-W14-3/main/pull/183[#183],
