--- a/docs/team/yuntongzhang.adoc
+++ b/docs/team/yuntongzhang.adoc
@@ -2,6 +2,8 @@
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
+:main: https://github.com/CS2103-AY1819S1-W14-3/main
+:other: https://github.com/CS2103-AY1819S1-T12-2/main
 
 == PROJECT: HealthBase
 
@@ -16,32 +18,48 @@ HealthBase is a desktop application designed to aid in the management of clinics
 == Summary of contributions
 
 * *Major enhancement*: added *`adddiet` command*
-** What it does: allows the user enter dietary requirements information for a given patient.
+** What it does: This command allows the user enter dietary requirements information for a given patient.
 ** Justification: This feature enables the dietary information of a patient to be recorded upon checking in or being registered, and to be reviewed subsequently, so that the nurses can prepare food for patients efficiently.
-** Highlights: This enhancement brings a unique feature for the application, which is not usually included in other hospital management systems. There are three types of dietary requirements included, so the implementation required to take into consideration how to separate different types of dietary requirements.
-** Credits: _{mention here if you reused any code/ideas from elsewhere or if a third-party library is heavily used in the feature so that a reader can make a more accurate judgement of how much effort went into the feature}_
+** Highlights: This enhancement brings a unique feature for the application, which is not usually included in other hospital management systems. There are three types of dietary requirements included, so the implementation required to take into consideration how to separate different types of dietary requirements. Also, this feature blocks invalid dietary requirement input to ensure data integrity.
+
+* *Major enhancement*: added *`checkout` command*
+** What it does: This command allows user to check out a patient from the application when the patient leaves the hospital, while still stores his information in the system for future usages.
+** Justification: This feature makes the application more suitable for the workflow in hospitals, as patients need to be checked out from the hospital after the end of his hospitalization.
+** Highlights: This enhancement makes the application highly extensible, as the information of the checked out patient is stored, which enables more operations and features to utilize these stored information.
+
+* *Major enhancement*: added *`checkin` command*
+** What it does: This command allows user to check in a returning patient, and also restores all his/her information (medication, medical history, dietary requirements, appointments etc.) back to the application.
+** Justification: This feature completes the workflow after checking out a patient, by providing a way to admit him/her back to the hospital if he/she is returning to the hospital after a period of time.
+** Highlights: This enhancement makes uses of the information stored by `checkout` command, and restores these information so that other commands can be valid on a given patient. Besides, this command differentiates whether the given patient is already registered or not, and direct user to the `register` command if the patient is on his/her first visit.
 
 * *Minor enhancement*: added a view panel that allows the user to inspect the added dietary requirements of a patient.
 
-* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
+* *Code contributed*: [https://nus-cs2103-ay1819s1.github.io/cs2103-dashboard/#=undefined&search=yuntong&sort=displayName&since=2018-09-12&until=2018-11-12&timeframe=day&reverse=false&repoSort=true[Functional and Test code]]
 
 * *Other contributions*:
 
 ** Project management:
-*** Managed releases `v1.1` - `v1.3` (3 releases) on GitHub
-*** Managed the project dashboard on Github
+*** Managed organisation code repository as administrator.
+*** Managed releases `v1.1` - `v1.4` (5 releases) on GitHub.
+*** Managed the project dashboard on Github.
+
 ** Enhancements to existing features:
-*** Refactored `checkin` command to `register` command (Commit: `link to commit`)
-*** Updated the user interface mockup to be consistent with our proposed product (Pull request https://github.com/CS2103-AY1819S1-W14-3/main/pull/18[#18])
+*** Refactored several `*Command` classes to avoid code duplication (Pull request {main}/pull/209[#209]).
+*** Modified the equality definition of `Person` class to make it suitable for HealthBase (Pull request {main}/pull/209[#209]).
+
 ** Documentation:
-*** Updated the User Guide to be aligned with the newly created `adddiet` command: https://github.com/CS2103-AY1819S1-W14-3/main/pull/83[#83]
+*** Updated the UserGuide to include `adddiet`, `checkout` and `checkin` command.
+*** Updated the DeveloperGuide to include implementation details of the `adddiet` command.
+*** Updated the user interface mockup to be consistent with our proposed product (Pull request {main}/pull/18[#18]).
+
 ** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com/CS2103-AY1819S1-W14-3/main/pull/20[#20], https://github.com/CS2103-AY1819S1-W14-3/main/pull/22[#22], https://github.com/CS2103-AY1819S1-W14-3/main/pull/29[#29], https://github.com/CS2103-AY1819S1-W14-3/main/pull/82[#82], https://github.com/CS2103-AY1819S1-W14-3/main/pull/95[#95], https://github.com/CS2103-AY1819S1-W14-3/main/pull/110[#110]
-*** Assisted teammates during integration of code for each release
-*** Contributed to forum discussions (examples: `coming soon`)
-*** Reported bugs and suggestions for other teams in the class (examples: `coming soon`)
+*** PRs reviewed (with non-trivial review comments): {main}/pull/20[#20], {main}/pull/22[#22], {main}/pull/29[#29], {main}/pull/82[#82], {main}/pull/95[#95], {main}/pull/110[#110].
+*** Reported several issues related to the UserGuide (Issues: {main}/issues/123[#123], {main}/issues/193[#193], {main}/issues/194[#194], {main}/issues/195[#195], {main}/issues/200[#200]).
+*** Reported bugs and suggestions for other teams in the class (Examples: {other}/issues/118[#118], {other}/issues/128[#128], {other}/issues/130[#130], {other}/issues/138[#138]).
+*** Assisted teammates during integration of code for each release.
+
 ** Tools:
-*** nil
+*** Set up Reposense for the organisation repository (Pull request https://github.com/CS2103-AY1819S1-W14-3/main/pull/221[#221]).
 
 
 == Contributions to the User Guide
@@ -56,6 +74,8 @@ include::../UserGuide.adoc[tag=adddiet]
 include::../UserGuide.adoc[tag=checkin]
 
 include::../UserGuide.adoc[tag=checkout]
+
+include::../UserGuide.adoc[tag=viewdiets]
 
 
 == Contributions to the Developer Guide
